ValueSet validate-code operation.